--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 04.02.2022 08:33:38</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 04.02.2022 09:09:57</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,21 +7,14 @@
 <h5>Pátek, 04. 02. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Tomatová</strong>
+<strong>Zeleninová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Srbské vepřové rizoto se sýrem a okurkou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							133,-
-						</span>
-</p>
-<p>
-<strong>Uzená krkovička se špenátem a bramborovým knedlíkem</strong>
+<strong>Kuřecí stehno na kari s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
@@ -52,7 +45,42 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 4.2.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Tiramisu</div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Mrkvový dort</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace bavorských baget </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Tomatová polévka se zeleninou -samostatně <em title="Mléko">7</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Tomatová polévka se zeleninou -s menu <em title="Mléko">7</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Burrito wrap, trhané hovězí maso, cheddar, fazole,  kukuřice, jalapeňos, variace listových salátů, pažitkový dip <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>300g Zapečená brokolice s batáty a modrým sýrem, šťouchané brambory, Rhode Island dresing <em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -128,7 +156,7 @@ drcenými rajčaty a chorizo klobásou 1a,9</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s citronem a dresinkem z celozrnne horcice, bramborovy salat s cervenou repou, petrzelkou, cibulkou a creme fraiche 139</li><li>Spagety s chobotnici, cerstvymi slavkami, baby spenatem, pestem s rajcaty, petrzelkou a parmezanem, citron {L} 175</li><li>Laosky larb s veprovym masem, cerstvou zeleninou, ryzovymi nudlemi, zelenymi bylinkami a sladkokyselou zalivkou s chilli a citronovou travou 139</li><li>Smazene teleci rizecky, bramborovy salat s cervenou repou, petrzelkou, cibulkou a creme fraiche, citron {L} 169</li><li>Recka fava ze zluteho hrachu s olivami, balkanskym syrem a salotkou,  arabske placky, salatek {L} 139</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka se sladkokyselym sezamovy dresinkem, ryzove nudle s cerstvou zeleninou, klicky a zelenymi bylinkami 139</li><li>Gravlax z divokeho lososa nerka se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou, klicky a bylinkami 169</li><li>Libanonsky grilovany kruti kebab, birjany z basmati ryze, arabska placka, jogurtovy dip, salatek {L} 139</li><li>Grilovane medailonky z panenske svickove se zelenymi peprem, kase ze zluteho hrachu s citronem a rimskym kminem 169</li><li></li><li>Bramborove gnocchi se syrem brie, zelenym peprem a prazenymi vlasskymi orechy se slunecnicovymi seminky, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
