--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 04.02.2022 09:09:57</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 04.02.2022 09:33:36</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -156,7 +156,7 @@ drcenými rajčaty a chorizo klobásou 1a,9</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka se sladkokyselym sezamovy dresinkem, ryzove nudle s cerstvou zeleninou, klicky a zelenymi bylinkami 139</li><li>Gravlax z divokeho lososa nerka se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou, klicky a bylinkami 169</li><li>Libanonsky grilovany kruti kebab, birjany z basmati ryze, arabska placka, jogurtovy dip, salatek {L} 139</li><li>Grilovane medailonky z panenske svickove se zelenymi peprem, kase ze zluteho hrachu s citronem a rimskym kminem 169</li><li></li><li>Bramborove gnocchi se syrem brie, zelenym peprem a prazenymi vlasskymi orechy se slunecnicovymi seminky, salatek {L} 139</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka se sladkokyselym sezamovy dresinkem, ryzove nudle s cerstvou zeleninou, klicky a zelenymi bylinkami 139</li><li>Gravlax z divokeho lososa nerka se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou, klicky a bylinkami 169</li><li>Libanonsky grilovany kruti kebab, birjany z basmati ryze, arabska placka, jogurtovy dip, salatek {L} 139</li><li>Grilovane medailonky z panenske svickove se zelenymi peprem, kase ze zluteho hrachu s citronem a rimskym kminem 169</li><li>Bramborove gnocchi se syrem brie, zelenym peprem a prazenymi vlasskymi orechy se slunecnicovymi seminky, salatek {L} 139<br/></li></ol>
 </td>
 </tr>
 </table>
