--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 10.02.2022 13:51:01</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 11.02.2022 06:09:07</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Čtvrtek, 10. 02. 2022</h5>
+<h5>Pátek, 11. 02. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Mexická Gulášová</strong>
@@ -50,49 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Čtvrtek 10.2.2022</div>
+<div class="nadpis">Pátek 11.2.2022</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Banánový Míša dort </div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Ořechový koláč </div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Kokosový puding s mangem nebo malinami </div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Dýňový krém, kokosové mléko, kari, semínka - samostatně <em title="Celer">9</em></div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Dýňový krém, kokosové mléko, kari, semínka - s menu <em title="Celer">9</em></div>
-<div class="cena">35 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Hovězí loupaná plec, rajská omáčka, houskový knedlík <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Pečené krůtí prso, dušená kapusta, bramborovo-dýňové pyré <em title="Mléko">7</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Portobello plněné ratatouille zeleninou a sýrem, pečené brambory, míchaný salát <em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -103,16 +63,16 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Česnečka se sýrem a krutony</td><td class="menuPrice">39,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi  </td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kulajda s hříbky a vajíčkem</td><td class="menuPrice">39,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Předkrm </h5><tr><td class="menuWeight">150g</td><td class="menuName">Gothajský salám z Maso Jičín s cibulí, octem a feferonkou, kváskový chléb</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Restované plátky gothaje z Maso Jičín na dijonské hořčici s majonézou, kváskový chléb</td><td class="menuPrice">59,-</td></tr></tbody>
+<h5 class="border_box_title">Předkrm</h5><tr><td class="menuWeight">150g</td><td class="menuName">Gothaj z Maso Jičín s cibulí, octem a feferonkou, kváskový chléb</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Restované plátky gothaje z Maso Jičín na dijonské hořčici s majonézou, kváskový chléb</td><td class="menuPrice">59,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Sladovnický hovězí guláš s červenou cibulí a feferonkou, naše karlovarské knedlíky vařené v páře</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Španělský vepřový ptáček, kynuté houskové knedlíky</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Rajská omáčka s hovězím masem, těstoviny kolínka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí prso na hříbkové omáčce, dušená jasmínová rýže pečená na cibulce s hřebíčkem</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Drůbeží játra na grilu, smažené hranolky, tatarka</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb:</td><td class="menuName">Nízkosacharidová dieta: Pečená vepřová panenka dorůžova, smetanová omáčka se šunkou a sušenými tomaty, zelené fazolové lusky, volské oko</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight">Instapivo</td><td class="menuName">Pokud jsi stálý sledující naše instagramového profilu "senkyrna7", tak máš čepovaný Staropramen 11° 0,5L pouze za 26,-Kč neomezeně. Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu obsluze. Platí i pro odnos piva s sebou.</td><td class="menuPrice">26,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené masové čevabčiči, vařené brambory s máslem a šnitlíkem, cibule, hořčice, tatarka</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Mix gril vepřové karé, kuřecí prso, vepřová panenka pečená, vařená celá brambora s česnekovým dresinkem, pepřová štáva se zeleným pepřem</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný olivo-citronovým dresinkem, řezy vepřové panenky, vařené vejce</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">2 + 1</td><td class="menuName">Staropramen  EXTRA CHMELENÁ 12% - Dej si dva čepované ležáky a domů za věrnost dostaneš 0,5l plechovku, není množstevně omezeno, vypiješ " dvacet kousku "  a dostaneš 10 plechovek</td><td class="menuPrice">84,-</td></tr><tr><td class="menuWeight">1 + 1</td><td class="menuName">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</td><td class="menuPrice">70,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na kuřecí steak se šunkou a smažený sýr za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Smažený sýr (45%), vařené brambory s máslem, tatarka</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Křenová smetanová omáčka s hovězím masem, kynuté houskové knedlíky</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí rizoto po srbsku, strouhaný sýr, kyselá okurka</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené holanské řízky, bramborová kaše s máslem, beraní roh</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborové halušky s uzeným masem a bílým zelím, škvarky na cibulce</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s restovanými žampiony, pečené brambory s kmínem, mexický dip</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Medailonky z vepřové panenky, rajčatový salátek s cibulkou, grilovaná karotka, květákové pyré, rukola</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">Instapivo</td><td class="menuName">Pokud jsi stálý sledující naše instagramového profilu "senkyrna7", tak máš čepovaný Staropramen 11° 0,5L pouze za 26,-Kč neomezeně. Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu obsluze. Platí i pro odnos piva s sebou.</td><td class="menuPrice">26,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na jemné sýrové omáčce, restované špecle</td><td class="menuPrice">142,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně s kovbojskými fazolemi, smažené bramborové hranolky</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Řecký salát (rajčata, okurka, červená cibule, ledový salát, černé olivy a balkánský sýr, promíchaný olivo-citronovým dresinkem, uzená kýta na grilu, vařené vejce</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">2+1</td><td class="menuName">Staropramen  EXTRA CHMELENÁ 12% - Dej si dva čepované ležáky a domů za věrnost dostaneš 0,5l plechovku, není množstevně omezeno, vypiješ " dvacet kousku "  a dostaneš 10 plechovek</td><td class="menuPrice">84,-</td></tr><tr><td class="menuWeight">1+1</td><td class="menuName">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</td><td class="menuPrice">70,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na kuřecí steak se šunkou a smažený sýr za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">TIP</td><td class="menuName">Dukátové buchtičky s vanilkovým šodo, šlehačkou a karamelem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
@@ -160,7 +120,7 @@ drcenými rajčaty a chorizo klobásou 1a,9</td>
 </tr>
 <tr>
 <td>
-<table class="dm"><tr><td class="amount"> </td><td class="title">Slepičí vývar se zeleninou, masem a petrželovými nudlemi 1a,3,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Burgundská hovězí pečeně s restovanou anglickou slaninou, žampiony a cibulkami s našimi bramborovými plackami 1a,3,7,9,12</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Kuřecí medailonky Caprese s rajčaty a mozzarellou se smetanovými brambory a salátem z polníčku 1a,3,7</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">350g</td><td class="title">Variace trhaných salátů s parmskou šunkou, kozím sýrem, cherry rajčaty, mrkví, bagetovými chipsy a rybízovou balsamocovou redukcí 1a,3,7,12</td><td class="pricem">135 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Boršč s červenou řepou a zakysanou smetanou 1a,7,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">180g</td><td class="title">Naše sekaná se sázeným vejcem, bramborovou kaší a nakládanou okurkou 1a,3,7</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Špíz z vepřové krkovice s klobásou a paprikou s americkými brambory, hořčicí a cibulí</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">5ks</td><td class="title">Naše lívance se žahourem z lesních plodů, skořicovým cukrem a zakysanou smetanou 1a,3,7</td><td class="pricem">125 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
