--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 11.02.2022 08:33:33</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 11.02.2022 09:11:45</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Pátek, 11. 02. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Mexická Gulášová</strong>
+<strong>Vývar s uzeným a nudlemi</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Smažené gordon bleu se šťouchaným bramborem a tatarkou</strong>
+<strong>Krůtí tandoori s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
 						</span>
 </p>
 <p>
-<strong>Milánské těstoviny s parmazánem</strong>
+<strong>Skořicové lívance s borůvkami</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							133,-
+							115,-
 						</span>
 </p>
 <p>
@@ -173,7 +173,7 @@ drcenými rajčaty a chorizo klobásou 1a,9</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Filet z atlantickeho hejka zapeceny na recky zpusob s rajcaty, maslovymi fazolemi a mozzarellou, jasminova ryze, salatek 139</li><li>Peceny filet z cerstveho norskeho lososa s kaparovo-vinnou omackou, stouchane brambory s cibulkou, salatek z cervene repy s krenem 169</li><li>Lasagne s hovezim a krutim masem, rajcaty a zelenymi bylinkami zapecene ve smetanove omacce, salatek {L} 139</li><li>Grilovane medailonky z krutich prsou s dzemem z cervene cibule s hrebickem, zeleninove birjany z basmati ryze, salatek 169</li><li>Smazeny brokolicovy rizek s kapustou a goudou, stouchane brambory s cibulkou, tatarska omacka {L} 139</li></ol>
+<ol><li>Peceny jihocesky pstruh s krenovou jogurtovou omackou, pecene brambory, salatek 139</li><li>Spagety s kousky chobotnice a humra, susenymi rajcaty a restovanym porkem, parmezan {L} 175</li><li>Zauzene pecene seleci ribsy v barbecue marinade, jasminova ryze, salatek 139</li><li>Medailonky z kanci plece na zelenem pepri, pecene brambory s podzimni zeleninou, salatek 169</li><li>Bramborove gnocchi s rajcaty, maslovymi fazolemi, sazenym vejcem a mozzarellou, salatek 139</li></ol>
 </td>
 </tr>
 </table>
